@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0856d4c8",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "131e50cf",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10cec750",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e921294c",
    "metadata": {},
    "outputs": [],
@@ -69,15 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "978624f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cow = gop.Scatter(points[:,0],points[:,1],points[:,2],mode='markers',m_size=0.3)\n",
-    "cow['x'].tolist()\n",
-    "cow['y'].tolist()\n",
-    "cow['z'].tolist()"
+    "cow = gop.Scatter(points[:,0],points[:,1],points[:,2],mode='markers',m_size=0.3)"
    ]
   },
   {
@@ -94,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e77a24b9",
    "metadata": {},
    "outputs": [],
@@ -116,6 +113,14 @@
     "fig = fig.update_scenes(xaxis_visible=False, yaxis_visible=False, zaxis_visible=False )\n",
     "fig = fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b57cf887",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
