@@ -16,6 +16,10 @@ Release 1.6.0
 - Functions isEqualExtended() are added to compare 2 scalar or 2 vectors
 - R 4.4.2 support
 
+Graphics
+--------
+- A new entry in plot3D.py: ScatterOnDb() to draw a set of points in 3D as a scatter
+
 Release 1.5.1
 =============
 - Fix old GLIBC compatibility under Ubuntu
